objects/AcntrObj1__c.object
<CustomObject>
    <description>Modify  comment for AcntrObj1</description>
    <fields>
        <fullName>AccFt1s__c</fullName>
        <description>Add Description org1 field</description>
        <label>AccFt1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcntrOrg2F1__c</fullName>
        <label>AcntrOrg2F1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AcntrOrg3F1__c</fullName>
        <description>Add AcntrOrg3F1 field</description>
        <label>AcntrOrg3F1</label>
        <type>Phone</type>
    </fields>
    <label>AcntrObj1</label>
    <nameField>
        <label>AcntrObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AcntrObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>